bin_PROGRAMS=a.out gsl_blocks_example gsl_vector_example gsl_vector_tofile gsl_vector_read gsl_matrix_example gsl_matrix_tofile gsl_matrix_vector_views
a_out_SOURCES=gsl_vecs_mats.c

gsl_blocks_example_SOURCES=gsl_blocks_example.c
gsl_blocks_example_LDADD=$(LIBS)

gsl_vector_example_SOURCES=gsl_vector_example.c
gsl_vector_example_LDADD=$(LIBS)

gsl_vector_tofile_SOURCES=gsl_vector_tofile.c
gsl_vector_tofile_LDADD=$(LIBS)

gsl_vector_read_SOURCES=gsl_vector_read.c
gsl_vector_read_LDADD=$(LIBS)

gsl_matrix_example_SOURCES=gsl_matrix_example.c
gsl_matrix_example_LDADD=$(LIBS)

gsl_matrix_tofile_SOURCES=gsl_matrix_tofile.c
gsl_matrix_tofile_LDADD=$(LIBS)

gsl_matrix_vector_views_SOURCES=gsl_matrix_vector_views.c
gsl_matrix_vector_views_LDADD=$(LIBS)