bin_PROGRAMS=a.out fft_short_pulse fft_short_pulse_630 real_transform
a_out_SOURCES=gsl_fft_examples.c

fft_short_pulse_SOURCES= fft_short_pulse.c
fft_short_pulse_LDADD =$(LIBS)

fft_short_pulse_630_SOURCES=fft_short_pulse_630.c
fft_short_pulse_630_LDADD=$(LIBS)

real_transform_SOURCES=real_transform.c
real_transform_LDADD=$(LIBS)